--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "^18",
+    "@heroicons/react": "^2.0.18",
     "react-dom": "^18",
+    "clsx": "^2.0.0",
     "next": "14.1.0"
   },
   "devDependencies": {
