--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "node -r dotenv/config ./scripts/seed.js",
     "lint": "next lint"
   },
   "dependencies": {
     "react": "^18",
     "@heroicons/react": "^2.0.18",
+    "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
+    "next-auth": "^5.0.0-beta.13",
     "react-dom": "^18",
     "clsx": "^2.0.0",
-    "next": "14.1.0"
+    "next": "14.1.0",
+    "use-debounce": "^10.0.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -23,6 +29,7 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
   }
