--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
     "@heroicons/react": "^2.0.18",
     "@vercel/postgres": "^0.5.1",
     "bcrypt": "^5.1.1",
-    "next-auth": "^5.0.0-beta.13",
-    "react-dom": "^18",
     "clsx": "^2.0.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
+    "react": "^18",
+    "react-dom": "^18",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "dotenv": "^16.3.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
